# OpenBachelorC

./: .gitignore  Makefile  README.md  build_exe.cmd  build_exe.ps1  build_js.cmd  build_js_alt.cmd  build_js_rel.cmd.encrypted  build_js_rel1666.cmd.encrypted  config_disable_trainer.cmd  config_enable_trainer.cmd  load_config_2461.cmd  load_config_apple_silicon.sh  load_config_jailed_phone.cmd  load_config_mumu.cmd  load_config_mumu_proxy_patch.cmd  load_config_rooted_phone.cmd  locker.py  main.cmd  main_attach_pc.cmd  main_no_proxy.cmd  merge.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  run.cmd  run.sh  run_dump_json.cmd  run_dump_json.sh  run_no_proxy.cmd  run_no_proxy.sh  run_termux.sh  setup-termux.sh  setup.sh  setup_pc.cmd  setup_proj.cmd  setup_proj_alt.cmd  setup_standalone.cmd  tool.txt  (+2 more)
conf/: config.json
rel/: extra.js  java.js  native.js  trainer.js
rel1666/: extra.js  java.js  native.js  trainer.js
src/helper/: helper.js.encrypted  helper.py.encrypted
src/launcher/: adb.py  const.py  dump.py  inject.py  main.py  standalone_helper.py
src/launcher/openbachelorc/: adb.py  const.py  dump.py  inject.py  main.py  setup_pc.py  standalone_helper.py  util.py
src/script/extra/: index.ts.encrypted
src/script/java/: index.ts.encrypted
src/script/native/: index.ts.encrypted
src/script/trainer/: index.ts.encrypted
src/script/util/: index.ts.encrypted
src/script1666/java/: index.ts.encrypted
src/script1666/native/: index.ts.encrypted
src/win_binary/: main.py
termux/: build.sh
